Bug#53482 ndbd crash if epoll_create is not supported  - Remove the printout causing the crash since error is already printed   to stderr using perror